data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_718.wast
;; 9. **Test 9: `nop` Preceding an Invalid Inline Type Declaration in Loop**    - Use a `nop` preceding a loop with an incorrect inline type declaration for its result value.    - **Constraint**: Ensures loop's inline type declaration is validated independently of `nop`.    - **Type Mismatch Check**: Verifies the loop adheres to type constraints despite `nop`.

(assert_invalid
  (module (func $loop-type-mismatch (nop) (loop (result i32) ()))
  "type mismatch"
)